--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <!--"reach out" section-->
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
-            <div  class="contact-info">
+            <div class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
                     frameborder="0"
@@ -174,7 +174,7 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
