--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <a href="#your-trainers">Your Trainers</a>
                     </li>
                     <li>
+                        <a href="#service-plans">Service Plans</a>
+                    </li>
+                    <li>
                         <a href="#reach-out">Reach Out</a>
                     </li>
                 </ul>
@@ -198,6 +201,18 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
                     </div>
                 </article>
+            </div>
+        </section>
+
+        <!-- Grid section -->
+        <section id="service-plans" class="services">
+            <div class="service-grid-container">
+                <div class="service-grid-item">One</div>
+                <div class="service-grid-item">Two</div>
+                <div class="service-grid-item">Three</div>
+                <div class="service-grid-item">Four</div>
+                <div class="service-grid-item">Five</div>
+                <div class="service-grid-item">Six</div>
             </div>
         </section>
 
